--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,11 @@
   font-family: "Poppins", sans-serif;
 }
 
+/* * {
+  outline: 1px solid red;
+} */
+
+
 body {
   background: #f9fbfd;
   color: #1d1d1d;
@@ -13,48 +18,6 @@ body {
 
 .section {
   padding: 80px 0;
-}
-
-.hero-grid {
-  display: grid;
-  grid-template-columns: 1.2fr 1fr;
-  align-items: center;
-  gap: 40px;
-}
-
-.role {
-  color: #ffb400;
-  font-weight: 600;
-  margin-bottom: 10px;
-}
-
-.hero-text h1 {
-  font-size: 42px;
-  margin-bottom: 15px;
-}
-
-.desc {
-  color: #666;
-  margin-bottom: 25px;
-  line-height: 1.6;
-}
-
-.btn {
-  padding: 10px 20px;
-  border-radius: 6px;
-  border: none;
-  cursor: pointer;
-  margin-right: 10px;
-}
-
-.primary {
-  background: #ffb400;
-  color: white;
-}
-
-.outline {
-  background: transparent;
-  border: 2px solid #333;
 }
 
 .project-card {
