--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -1,8 +1,28 @@
+.heroSection {
+  margin-top: -60px;
+  position: relative;
+  z-index: -10;
+}
+
 .heroGrid  {
   display: grid;
-  grid-template-columns: 1.2fr 1fr;
+  grid-template-columns: 1fr 0.5fr;
   align-items: center;
   gap: 40px;
+  padding-left: 80px;
+  height: 110vh;
+}
+
+.heroImage {
+  display: flex;
+  justify-content: right;
+  /* align-items: flex-start; */
+  align-self: start;
+}
+
+.heroImage img {
+  max-width: 600px;
+  height: auto;
 }
 
 .role {
