--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -9,6 +9,16 @@
   align-items: center;
 }
 
+.homeLink {
+  text-decoration: none;
+  color: #1d1d1d;
+}
+
+.homeLink a {
+  text-decoration: none;
+  color: #1d1d1d;
+}
+
 .navLinks {
   display: flex;
   gap: 30px;
